# farever-minimap

./: .gitignore  CAPABILITIES.md  README.md
community-plugins/: README.md  custom-waypoints-by-felip.lua  custom-waypoints-by-ispherz.lua  damage-calculator-by-iskrumpie.lua  farever_logger-by-mupki.lua  item-finder-by-iskrumpie.lua  item-tracker-by-dpiza.lua  mob-codex-checker-by-kaaregravesen.lua  poi-finder-by-iskrumpie.lua  poi_height-by-iskrumpie.lua
data/plugins/: README.md
docs/: approach-comparison.md  engine-analysis.md  plan.md
examples/plugins/: animation_demo.lua  api_inspector.lua  damage_planner.lua  target_probe.lua
research/: anti-cheat.md  fow_calibration.json  hero-layout.md  minimap_calibration.json  pak-format.md  types.md  version-pin.md
src/: CMakeLists.txt  README.md
src/dpsmeter-dll/: CMakeLists.txt  aggregator.cpp  aggregator.h  d3d12_hook.cpp  d3d12_hook.h  damage_scan.cpp  damage_scan.h  dllmain.cpp  hero_state.cpp  hero_state.h  log.cpp  log.h  mem_scan.cpp  mem_scan.h  overlay.cpp  overlay.h  type_anchor.cpp  type_anchor.h
src/farever-mod/: CMakeLists.txt  aggregator.cpp  d3d12_hook.cpp  d3d12_hook.h  damage.cpp  damage.h  dinput8.def  dinput8_proxy.cpp  dinput8_proxy.h  dllmain.cpp  hero_state.cpp  hero_state.h  hl_hook.cpp  hl_hook.h  hl_pump.cpp  hl_pump.h  libhl.cpp  libhl.h  log.cpp  log.h  mem_scan.cpp  mem_scan.h  overlay.cpp  overlay.h  overlay_window.cpp  plugins.cpp  plugins.h  skill_resolve.cpp  skill_resolve.h  target_state.cpp  target_state.h  type_anchor.cpp  type_anchor.h
src/injector/: CMakeLists.txt  main.cpp
src/minimap-dll/: CMakeLists.txt  d3d12_hook.cpp  d3d12_hook.h  dllmain.cpp  hero_scan.cpp  live_position.cpp  live_position.h  log.cpp  log.h  overlay.cpp  overlay.h  textures.cpp  textures.h
tools/: calibrate.py  extract_strings.py  find_hero.py  find_me.py  fow_viewer.py  hlbc_parse.py  hxserializer.py  pak_extract.py  pak_walk.py  probe.py  render_zones.py  snapdiff.py  stitch_minimap.py  track_pos.py  verify_stable.py
